// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopoverBase should render 1`] = `
<div>
  <div
    class="popover clay-popover-bottom"
  >
    <div
      class="arrow"
    />
  </div>
</div>
`;

exports[`PopoverBase.Body should render 1`] = `
<div>
  <div
    class="popover-body"
  >
    Body
  </div>
</div>
`;

exports[`PopoverBase.Footer should render 1`] = `
<div>
  <div
    class="popover-footer"
  >
    Footer
  </div>
</div>
`;

exports[`PopoverBase.Header should render 1`] = `
<div>
  <div
    class="popover-header"
  >
    Header
  </div>
</div>
`;
